syntax = "proto3";

option csharp_namespace = "OVB.Demos.Ecommerce.Microsservices.Account.WebGrpc";

package greet;

service Account {
	rpc CreateAccount (CreateAccountUseCaseInput) returns (CreateAccountUseCaseOutput);
	rpc HealthCheck (HealthCheckInput) returns (HealthCheckOutput);
}

message CreateAccountUseCaseInput {
	string tenantIdentifier = 8;
    string correlationIdentifier = 9;
	string sourcePlatform = 1;
    string executionSource = 2;
    string name = 3;
    string lastName = 4;
    string username = 5;
    string password = 6;
    string email = 7;
}

message HealthCheckInput {
	string name = 1;
}

message HealthCheckOutput {
	string name = 1;
}

message CreateAccountUseCaseOutput {
	bool created = 1;
	repeated Notification messages = 2;
}	

message Notification {
	string message = 1;
	string typeNotification = 2;
}
